feat:create site_title

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="{% get_media_prefix %}image/img/favicon.png" type="image/png">
-        <title>MeetMe Personal</title>
+        <title>{{ site_title }}</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
         <link rel="stylesheet" href="{% static 'vendors/linericon/style.css' %}">
@@ -35,7 +35,7 @@
 							<div class="media-body">
 								<div class="personal_text">
 									<h6>Hello Everybody, i am</h6>
-									<h3>Donald McKinney</h3>
+									<h3>{{ site_title }}</h3>
 									<h4>Junior UI/UX Developer</h4>
 									<p>You will begin to realise why this exercise is called the Dickens Pattern (with referencYou will begin to realise why this exercise is called the Dickens Pattern (with referencYou will begin to realise why this exercise is called the Dickens Pattern (with referencYou will begin to realise why this exercise is called the Dickens Pattern (with referencYou will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
 									<ul class="list basic_info">
