--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 								<div class="personal_text">
 									<h6>Hello Everybody, i am</h6>
 									<h3>{{ site_title }}</h3>
-									<h4>Junior UI/UX Developer</h4>
+									<h4>{{ home_banner }}</h4>
 									<p>You will begin to realise why this exercise is called the Dickens Pattern (with referencYou will begin to realise why this exercise is called the Dickens Pattern (with referencYou will begin to realise why this exercise is called the Dickens Pattern (with referencYou will begin to realise why this exercise is called the Dickens Pattern (with referencYou will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
 									<ul class="list basic_info">
 										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
