feat:create admin setting for image model

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 					<div class="banner_content">
 						<div class="media">
 							<div class="d-flex">
-								<img src="{% get_media_prefix %}image/img/personal.jpg" alt="" width="400px">
+								<img src="{{ profile.url }}" alt="" width="400px">
 							</div>
 							<div class="media-body">
 								<div class="personal_text">
