--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 									<h6>Hello Everybody, i am</h6>
 									<h3>{{ site_title }}</h3>
 									<h4>{{ home_banner }}</h4>
-									<p>You will begin to realise why this exercise is called the Dickens Pattern (with referencYou will begin to realise why this exercise is called the Dickens Pattern (with referencYou will begin to realise why this exercise is called the Dickens Pattern (with referencYou will begin to realise why this exercise is called the Dickens Pattern (with referencYou will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
+									<p>{{ text }}</p>
 									<ul class="list basic_info">
 										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
 										<li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li>
