--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,309 +1,36 @@
-/*=================== fonts ====================*/
-@import url("https://fonts.googleapis.com/css?family=Heebo:300,400,700,900|Roboto:300,400,500,700");
-/*---------------------------------------------------- */
-/*----------------------------------------------------*/
-.list {
-  list-style: none;
-  margin: 0px;
-  padding: 0px; }
-
-a {
-  text-decoration: none;
-  transition: all 0.3s ease-in-out; }
-  a:hover, a:focus {
-    text-decoration: none;
-    outline: none; }
-
-.row.m0 {
-  margin: 0px; }
-
-body {
-  line-height: 26px;
-  font-size: 16px;
-  font-family: "Roboto", sans-serif;
-  font-weight: normal;
-  color: #777777; }
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Heebo", sans-serif;
-  font-weight: bold; }
-
-button:focus {
-  outline: none;
-  box-shadow: none; }
-
-.p0 {
-  padding-left: 0px;
-  padding-right: 0px; }
-
-.p_120 {
-  padding-top: 120px;
-  padding-bottom: 120px; }
-
-.p_100 {
-  padding-top: 100px;
-  padding-bottom: 100px; }
-
-.pad_top {
-  padding-top: 120px; }
-
-.pad_bt {
-  padding-bottom: 120px; }
-
-.mt-25 {
-  margin-top: 25px; }
-
-@media (min-width: 1200px) {
-  .container {
-    max-width: 1170px; } }
-
-@media (min-width: 1620px) {
-  .box_1620 {
-    max-width: 1620px;
-    margin: auto;
-    width: 100%;
-    padding-left: 0px;
-    padding-right: 0px; } }
-/* Main Title Area css
-============================================================================================ */
-.main_title {
-  text-align: center;
-  max-width: 670px;
-  margin: 0px auto 75px; }
-  .main_title h2 {
-    font-family: "Heebo", sans-serif;
-    font-size: 36px;
-    color: #222222;
-    margin-bottom: 15px;
-    text-transform: uppercase; }
-  .main_title p {
-    font-size: 16px;
-    font-family: "Roboto", sans-serif;
-    font-weight: normal;
-    line-height: 26px;
-    color: #777777;
-    margin-bottom: 0px; }
-
-/* End Main Title Area css
-============================================================================================ */
-/*---------------------------------------------------- */
-/*----------------------------------------------------*/
-/* Home Banner Area css
-============================================================================================ */
-.home_banner_area {
-  position: relative;
-  margin-bottom: 200px;}
-  .home_banner_area .box_1620 {
-    min-height: 700px;
-    position: relative;
-    bottom: -100px;
+body{
+  box-sizing: border-box;
 }
-  .home_banner_area .banner_inner {
-    position: relative;
-    width: 100%;
-    min-height: 700px;
-    display: flex; }
-    .home_banner_area .banner_inner .banner_content {
-      color: #222222;
-      vertical-align: middle;
-      align-self: center;
-      text-align: left; }
-      .home_banner_area .banner_inner .banner_content .media .d-flex {
-        padding-right: 125px; }
-      .home_banner_area .banner_inner .banner_content .media .media-body {
-        vertical-align: middle;
-        align-self: center; }
-
-.blog_banner {
-  min-height: 780px;
+.container{
+  display: flex;
+  margin-top: 200px; 
+  width: 100% ; 
   position: relative;
-  z-index: 1;
-  overflow: hidden;
-  margin-bottom: 0px; }
-  .blog_banner .banner_inner {
-    background: #04091e;
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    min-height: 780px;
-    z-index: 1; }
+}
+.info{
+  padding: 20px;
+}
+.profile{
+  position: absolute;
+}
+.info{
+  position: absolute;
+  left: 30%;
+  
+}
+.profile img{
+  width: 300px;
+  border-radius: 200px;
+  padding: 10px;
 
-/* End Home Banner Area css
-============================================================================================ */
-/* Personal Profile Area css
-============================================================================================ */
-.profile_area .col-lg-7 {
-  vertical-align: middle;
-  align-self: center; }
-.personal_text h6 {
-  font-size: 14px;
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 2.1px;
-  font-weight: normal;
-  margin-bottom: 12px;
-  color: #222222; }
-.personal_text h4 {
-  font-size: 16px;
-  font-weight: 500;
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-  color: #222222; }
-.personal_text h3 {
-  font-size: 48px;
-  text-transform: uppercase;
-  margin-bottom: 15px;
-  color: #222222; }
-.personal_text p {
-  font-family: "Roboto", sans-serif;
-  max-width: 540px;
-  color: #777777;
-  margin-bottom: 40px; }
-.personal_text .basic_info li {
-  margin-bottom: 15px; }
-  .personal_text .basic_info li a {
-    position: relative;
-    padding-left: 40px;
-    font-size: 16px;
-    color: #777777; }
-    .personal_text .basic_info li a i {
-      position: absolute;
-      left: 0px;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 20px;
-      color: #766dff; }
-  .personal_text .basic_info li:last-child {
-    margin-bottom: 0px; }
-.personal_text .personal_social {
-  margin-top: 45px; }
-  .personal_text .personal_social li {
-    display: inline-block;
-    margin-right: 7px; }
-    .personal_text .personal_social li:last-child {
-      margin-right: 0px; }
-    .personal_text .personal_social li a {
-      line-height: 40px;
-      width: 40px;
-      background: #e8e8e8;
-      border-radius: 5px;
-      display: inline-block;
-      text-align: center;
-      color: #fff;
-      font-size: 16px; }
-    .personal_text .personal_social li:hover a {
-      background-image: -moz-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
-      background-image: -webkit-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
-      background-image: -ms-linear-gradient(0deg, #766dff 0%, #88f3ff 100%); }
-
-/* End Personal Profile Area css
-============================================================================================ */
-/*---------------------------------------------------- */
-/* Footer Area css
-============================================================================================ */
-.footer_area {
-  background: #000; }
-
-.f_title {
-  margin-bottom: 35px; }
-  .f_title h3 {
-    color: #fff;
-    font-size: 18px;
-    font-weight: bold;
-    font-family: "Heebo", sans-serif;
-    margin-bottom: 0px; }
-
-.ab_widget p {
-  font-size: 14px;
-  line-height: 24px;
-  font-family: "Roboto", sans-serif;
-  color: #777777;
-  margin-bottom: 30px; }
-  .ab_widget p a {
-    color: #766dff; }
-  .ab_widget p + p {
-    margin-bottom: 0px; }
-
-.news_widget {
-  padding-right: 15px; }
-  .news_widget p {
-    font-size: 14px;
-    line-height: 24px;
-    font-family: "Roboto", sans-serif;
-    color: #777777;
-    margin-bottom: 15px; }
-  .news_widget .input-group input {
-    height: 40px;
-    background: transparent;
-    border-radius: 0px;
-    width: 80%;
-    border: none;
-    padding: 0px 15px;
-    border: 1px solid #1e233b;
-    font-size: 14px;
-    font-family: "Roboto", sans-serif;
-    color: #cccccc;
-    outline: none;
-    box-shadow: none; }
-    .news_widget .input-group input.placeholder {
-      font-size: 14px;
-      font-family: "Roboto", sans-serif;
-      font-weight: normal;
-      color: #cccccc; }
-    .news_widget .input-group input:-moz-placeholder {
-      font-size: 14px;
-      font-family: "Roboto", sans-serif;
-      font-weight: normal;
-      color: #cccccc; }
-    .news_widget .input-group input::-moz-placeholder {
-      font-size: 14px;
-      font-family: "Roboto", sans-serif;
-      font-weight: normal;
-      color: #cccccc; }
-    .news_widget .input-group input::-webkit-input-placeholder {
-      font-size: 14px;
-      font-family: "Roboto", sans-serif;
-      font-weight: normal;
-      color: #cccccc; }
-  .news_widget .input-group .sub-btn {
-    border-radius: 0px;
-    background-image: -moz-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
-    background-image: -webkit-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
-    background-image: -ms-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
-    outline: none !important;
-    box-shadow: none !important;
-    padding: 0px;
-    border: none;
-    width: 42px;
-    cursor: pointer;
-    color: #fff; }
-
-.social_widget p {
-  font-size: 14px;
-  line-height: 24px;
-  font-family: "Roboto", sans-serif;
-  color: #777777;
-  margin-bottom: 10px; }
-.social_widget .list li {
-  margin-right: 17px;
-  display: inline-block; }
-  .social_widget .list li a {
-    color: #cccccc;
-    font-size: 14px;
-    transition: all 300ms linear 0s; }
-  .social_widget .list li:last-child {
-    margin-right: 0px; }
-  .social_widget .list li:hover a {
-    color: #766dff; }
-
-.copy_right_text {
-  text-align: center;
-  margin-top: 60px; }
-  .copy_right_text p a {
-    color: #766dff; }
-
-/* End Footer Area css
-============================================================================================ */
-/*---------------------------------------------------- */
- 
+}
+.contact{
+  position: absolute;
+  left:30%;
+  top:70%;
+  display:flex;
+}
+#message{
+  width: 500px;
+  padding:60px;
+}
