--- a/templates/index.html
+++ b/templates/index.html
@@ -7,36 +7,50 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="{% get_media_prefix %}image/img/favicon.png" type="image/png">
+		<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
         <title>{{ site_title }}</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+		<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-uy+lGja+ayr5nrEZ8s1/T9m7+8bN2phqGG5/odK1Z/KGrQhQwI+GlRvFErfif2dy8nDtr3Wql/waOwRm5fyQXw==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+
 
         <!-- main css -->
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
-        <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     </head>
     <body>	       
 		<div class="container">
 			<div class="profile">
 				<img src="{{ profile.url }}" alt="profile">
 			</div>
+			<div class="links">
+				<ul>
+					<li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+					<li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+					<li><a href="#">Mobile</a></li>
+					<li><a href="#">twitter</a></li>
+				</ul>
+			</div>
 			<div class="info">
 				<h2>{{ site_title }}</h2>
 				<p>{{ home_banner }}</p>
 				<p>{{ text }}</p>
 			</div>
-			
+			<div class="get-cv">
+				<a href="#" class="btn btn-primary">Get My CV</a>
+			</div>
 		</div>
 		<div class="contact">
 			<form class="row contact_form" method="post" id="contactForm" novalidate="novalidate">
 				<div class="col-md-6">
 					<div class="form-group">
+						<label>Email</label>
 						<input type="email" class="form-control" id="email" name="email" placeholder="Enter email address">
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="form-group">
-						<textarea class="form-control" name="message" id="message" rows="1" placeholder="Enter Message"></textarea>
+						<label>Message</label>
+						<textarea class="form-control" name="message" id="message" rows="1"></textarea>
 					</div>
 				</div>
 				<div class="col-md-12 text-right">
