--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,9 @@
         <!-- main css -->
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
     </head>
-    <body>	       
+    <body>	    
+		
+   
 		<div class="container">
 			<div class="profile">
 				<img src="{{ profile.url }}" alt="profile">
@@ -37,10 +39,14 @@
 			</div>
 			<div class="get-cv">
 				<a href="#" class="btn btn-primary">Get My CV</a>
+				<!-- Add a checkbox for toggling dark mode -->
+				<input type="checkbox" id="dark-mode-checkbox">
+
 			</div>
 		</div>
 		<div class="contact">
 			<form class="row contact_form" method="post" id="contactForm" novalidate="novalidate">
+				{% csrf_token %}
 				<div class="col-md-6">
 					<div class="form-group">
 						<label>Email</label>
@@ -65,5 +71,6 @@
         <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
+		<script src="{% static 'js/script.js' %}"></script>
     </body>
 </html>
