feat:create contact model

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,10 +26,9 @@
 			</div>
 			<div class="links">
 				<ul>
-					<li><a href="#"><i class="fa-brands fa-github"></i></a></li>
-					<li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-					<li><a href="#">Mobile</a></li>
-					<li><a href="#">twitter</a></li>
+					<li><a href="#"><img src="{% get_media_prefix %}icons8-linkedin-24.png"></a></li>
+					<li><a href="#"><img src="{% get_media_prefix %}icons8-github-24.png"></a></li>
+					<li><a href="#"><img src="{% get_media_prefix %}icons8-telegram-48.png" width="30px"></a></li>
 				</ul>
 			</div>
 			<div class="info">
@@ -38,10 +37,7 @@
 				<p>{{ text }}</p>
 			</div>
 			<div class="get-cv">
-				<a href="#" class="btn btn-primary">Get My CV</a>
-				<!-- Add a checkbox for toggling dark mode -->
-				<input type="checkbox" id="dark-mode-checkbox">
-
+				<a href="#" class="btn">Get My CV</a>
 			</div>
 		</div>
 		<div class="contact">
