--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,17 +43,17 @@ body {
 .links ul {
   display: flex;
   list-style-type: none;
+  margin-right: 50px;
 }
 
 .links li {
-  padding: 0 20px; /* Bağlantılar arası boşluk */
+  padding: 0 10px; /* Bağlantılar arası boşluk */
 }
 
 .links a {
   text-decoration: none;
-  color: black;
+  /* color: black; */
 }
-
 .get-cv {
   position: absolute;
   top: 20px;
@@ -71,17 +71,8 @@ body {
 
 .get-cv .btn:hover {
   border-radius: 5px;
-  border:1px solid;
-
-
 }
-/* Define styles for dark mode */
-.dark-mode {
-  background-color: #1f1f1f;
-  color: #fff;
-}
-
-/* Additional styling for dark mode */
-.dark-mode label {
-  color: #fff; /* Adjust label color for better visibility */
+.get-cv .btn::before {
+  border-radius: 5px;
+  background-color: green;
 }
