--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,8 @@
     </head>
     <body>	    
 		
-   
+		
+		  
 		<div class="container">
 			<div class="profile">
 				<img src="{{ profile.url }}" alt="profile">
@@ -46,18 +47,21 @@
 				<div class="col-md-6">
 					<div class="form-group">
 						<label>Email</label>
-						<input type="email" class="form-control" id="email" name="email" placeholder="Enter email address">
+						<!-- <input type="email" class="form-control" id="email" name="email" placeholder="Enter email address"> -->
+						{{ form.email}}
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="form-group">
 						<label>Message</label>
-						<textarea class="form-control" name="message" id="message" rows="1"></textarea>
+						{{ form.text }}
+						<button type="submit" value="submit" class="btn btn-primary">Send Message</button>
+						{% for messages in message %}
+							<div class="alert alert-success" role="alert">{{ message }}</div>
+						{% endfor %}
 					</div>
 				</div>
-				<div class="col-md-12 text-right">
-					<button type="submit" value="submit" class="btn submit_btn">Send Message</button>
-				</div>
+				
 			</form>
 		</div>
 
